# fraud_detection_system

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
configs/: train_config.yaml
scripts/: generate_demo_data.py  train_model.py
src/fraud_detection/: __init__.py  config.py  data.py  demo_data.py  explainability.py  feedback.py  pipeline.py  training.py
tests/: test_pipeline.py
