[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-detection-system"
version = "0.1.0"
description = "Bank fraud detection starter with MLOps, MLflow, SHAP and Streamlit."
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]

